2007-04-01  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/reader.R: \code{FunctionGenerator} is now an attribute, not a
	class anymore.

	* R/plaintextdoc.R: Custom show method for plain text documents.

	* R/aobjects.R: Added a class for structured text documents.

	* R/reader.R: Replaced remaining \code{parser} occurrences with
	\code{reader}.

	* R/textdoccol.R (summary): Indent tags. 

	* R/textdocco.R (removePunctuation): Transform method to remove
	punctuation marks.

2007-03-21  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R (sFilter): Simplified sFilter significantly by
	using prescindMeta().

2007-03-18  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R: Improved database support.

2007-03-16  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/termdocmatrix.R (TermDocMatrix): Uses sparse matrices.

	* R/resolve.R (resolveISOcode): Extracts the language from a ISO
	language code.

	* R/textdoccol.R (TextDocCol): Refactored several parser arguments
	into parserControl argument.

	* R/aobjects.R (TextDocument): Introduced the "Language" slot.

2007-03-14  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* Work/tmDataSetup.R: The datasets acq and crude can now be
	created on the fly.

	* R/stopwords.R: Introduced a function returning the stopwords for
	a given language (English, German and French at the moment)

	* R/textdoccol.R (stemDoc): Stemming uses Rstem if available,
	otherwise falls back to Snowball package.

2007-01-30  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/dissimilarity-methods.Rd: Make clear that any method offered
	by "dists" from package "cba" can be used.

2007-01-22  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* inst/doc/tm.Rnw: Fixed quotes-appearing-as-boxes-bug according
	to Kurt's latex suggestion. Removed points and underscores in
	variable names for consistent naming.

	* DESCRIPTION: Update to version 0.1-2.

	* man/TextRepository.Rd: Fixed bug in documentation.

2007-01-12  Ingo Feinerer  <h0125130@wu-wien.ac.at>
